source/style.less
/* ... */
body
{
    color: white;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    background: url('/images/background.jpg') no-repeat center center fixed;
    background-color: black;
    background-size: cover;
}

section
{
    top: 50%;
    left: 50%;
    width: 550px;
    height: 500px;
    font-size: 16px;
    font-weight: 200;
    overflow: hidden;
    position: absolute;
    text-align: center;
    margin-top: -250px;
    margin-left: -275px;
    text-shadow: rgba(0, 0, 0, 0.3) 0px 2px;
}

section > h1
{
    cursor: pointer;
    font-size: 100px;
    font-weight: bold;
    letter-spacing: -2px;
    text-rendering: optimizelegibility;
}

section > h2
{
    font-size: 40px; 
    margin-top: 20px;
}

section > h3
{
    height: 100px;
    margin-top: 5px;
    font-size: 22px;
}

section > form
{
    height: 45px;
    width: 475px;
    overflow: hidden;
    margin-top: 60px;
    margin-left: auto;
    margin-right: auto;
}

section > form > input
{
    height: 40px;
    width: 410px;
    outline: none;
    color: #5a5a5a;
    font-size: 16px;
    border-radius: 8px;
    padding-left: 10px;
    padding-right: 40px;
    border: 1px solid #444;
    background-color: #fff;
    -moz-user-select: auto;
    -webkit-user-select: auto;
}

section > form > input:disabled
{
    background-color: white;
}

section > ul
{
    margin-top: 60px;  
}

section > ul > li
{
    width: 100px;
    font-size: 22px;
    display: inline-block;
}

section > ul > li > a
{
    color: white;
    font-size: 18px;
    text-decoration: none;
}

section > ul > li > a:hover,
section > ul > li > a:focus
{
    color: white;
    font-size: 18px;
    text-decoration: underline;
}

section > figure
{
    min-width: 60px;
    min-height: 60px;
    cursor: pointer;
    margin-top: 50px;
    display: inline-block;
}

section > figure > img
{
    min-width: 60px;
    min-height: 60px;
    max-width: 520px;
    max-height: 334px;
    border-radius: 8px;
    padding: 5px 5px 5px 5px;
    border: 2px dashed #ccc;
}

section > figure > figcaption
{
    top: -57px;
    width: auto;
    height: 35px;
    overflow: hidden;
    text-align: right;
    position: relative;
    border-radius: 8px;
    white-space: nowrap;
    padding: 10px 10px 10px 10px;
    background: rgba(0, 0, 0, 0.3);
}
/* ... */

